--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -5,88 +5,91 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
 <BaseLayout title="Resume" sideBarActiveItemID="cv">
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Profile</div>
+    <div class="text-3xl w-full font-bold">CV</div>
   </div>
 
   <div class="mb-10 text-justify">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    You can download my CV <a href="/public/rz_cv.pdf" target="_blank" class="link">here</a>. For a quick overview of my past experience, you can check the following sections.
   </div>
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Education</div>
+    <div class="text-2xl w-full font-bold">Education</div>
   </div>
 
   <div class="time-line-container grid gap-4 mb-10">
     <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
+      title="Pontificia Universidad Católica de Chile"
+      subtitle="Industrial and Mathematical Engineering (BSc), 2009-2016"
     />
     <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
+      title="École Polytechnique, France"
+      subtitle="Applied Mathematics (BSc and MSc), 2011-2015"
+    />
+    <TimeLineElement
+      title="Columbia University, US"
+      subtitle="PhD in Sustainable Development, 2020-"
     />
   </div>
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Experience</div>
+    <div class="text-2xl w-full font-bold">Previous Work Experience</div>
   </div>
 
   <div class="time-line-container mb-10">
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="R&D Intern at PSA Peugeot Citroën"
+      subtitle="From June to September 2013. Bessoncourt, France"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+      Mathematical modelling of maritime car shipping.
     </TimeLineElement>
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Research Assistant at Collége de France"
+      subtitle="From April to July 2014. Paris, France"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+      Mathematical modelling and statistical analysis at the Mathematical Neuroscience Laboratory with Jonathan Touboul.
     </TimeLineElement>
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Reseach Assistant at Pontificia Universidad Católica de Chile"
+      subtitle="From March 2015 to April 2016. Santiago, Chile"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+      Research Assistant at the Department of Industrial Engineering with Tomás Reyes and Pablo Hernández Lagos.
+    </TimeLineElement>
+    <TimeLineElement
+      title="Economist at Central Bank of Chile"
+      subtitle="From May 2016 to June 2020. Santiago, Chile"
+    >
+      Macroeconomic modeling and forecasting; monetary policy analysis.
     </TimeLineElement>
   </div>
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Certifications</div>
+    <div class="text-2xl w-full font-bold">Awards and Scholarships</div>
   </div>
 
   <ul class="list-disc mx-6 mb-10 grid gap-2">
     <li>
-      <a href="#" target="_blank"> Certification Name (with link)</a>
+      Dean Fellowship, Columbia University, 2020-2025
     </li>
     <li>
-      <a href="#" target="_blank"> Certification Name (with link)</a>
+      Best Student in Insdustrial Engineering Prize, Professional Engineers Association, Chile, 2017
     </li>
-  </ul>
-
-  <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Skills</div>
-  </div>
-
-  <ul class="list-disc md:columns-5 columns-2 mx-6">
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
+    <li>
+      Best Student Prize, Department of Industrial Engineering, PUC, 2016
+    </li>
+    <li>
+      Best Student Prize, Department of Mathematical Engineering, PUC, 2016
+    </li>
+    <li>
+      Eiffel Excellence Scholarship, France, 2012-2014
+    </li>
+    <li>
+      Matricula de Honor Scholarship, PUC, 2010
+    </li>
+    <li>
+      Padre Hurtado Scholarship Prize, PUC, 2009-2015
+    </li>
+    <li>
+      Excellence Scholarship, Ministerio de Educación, Chile, 2009-2011
+    </li>
   </ul>
 </BaseLayout>
