--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -9,7 +9,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
   <div class="mb-10 text-justify">
-    You can download my CV <a href="/public/rz_cv.pdf" target="_blank" class="link">here</a>. For a quick overview of my past experience, you can check the following sections.
+    You can download my CV <a href="/rz_cv.pdf" target="_blank" class="link">here</a>. For a quick overview of my past experience, you can check the following sections.
   </div>
 
   <div class="mb-5">
